
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* ERR_FAILURE ;
 int LINUX_ADDR ;
 int LINUX_SIZE ;
 int SIGPIPE ;
 int bsd_exploitation () ;
 int detect_remote_os () ;
 scalar_t__ detectos ;
 int hdl_crashed ;
 scalar_t__ isbsd ;
 int linux_exploitation (int ,int ) ;
 int printf (char*) ;
 int signal (int ,int ) ;

void do_xploit(void)
{
    int linux_only = 0;

    signal(SIGPIPE, hdl_crashed);
    if (detectos)
        linux_only = detect_remote_os();
    if (isbsd)
        bsd_exploitation();
    else
        {
            linux_exploitation(LINUX_ADDR, LINUX_SIZE);
            if (!linux_only)
                bsd_exploitation();
        }
    printf(ERR_FAILURE);
    return;
}
